fix global search nav item spacing

--- a/src/main/webapp/app/core/navbar/global-search/components/global-search-navbar.component.scss
+++ b/src/main/webapp/app/core/navbar/global-search/components/global-search-navbar.component.scss
@@ -57,7 +57,7 @@
 .keyboard-hint {
     /* Reset */
     margin-left: 0.25rem;
-    padding: 0 0.25rem 0 0;
+    padding: 0;
     border: none;
     background: transparent;
 
